<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/winner_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="winner"
        android:gravity="center"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Game Summary"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="15sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/looser"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/looser_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/looser_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/looser_score"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/winner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/winner_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/winner_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/winner_score"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="200dp"
        android:layout_margin="40dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quit" />

        <Button
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game" />


    </LinearLayout>


</LinearLayout>